fix inconsistencies and some odd spacing

--- a/general.css
+++ b/general.css
@@ -51,7 +51,8 @@ p {
 	padding: 0 1.2rem 0.6rem 1.2rem;
 	border-bottom: 3px solid #7149b3;
 	font-weight: 600;
-	font-size: 3rem;
+	font-size: 4rem;
+	/* font-size: 4.8rem; */
 	margin-bottom: 4.8rem;
 }
 
